@@ -33,6 +33,9 @@
 
 #include <vector>
 #include <bits/uniform_int_dist.h>
+#if __cplusplus > 201703L
+# include <concepts>
+#endif
 
 namespace std _GLIBCXX_VISIBILITY(default)
 {
@@ -47,6 +50,18 @@ _GLIBCXX_BEGIN_NAMESPACE_VERSION
    * A facility for generating random numbers on selected distributions.
    * @{
    */
+
+#ifdef __cpp_lib_concepts
+  /// Requirements for a uniform random bit generator.
+  template<typename _Gen>
+    concept uniform_random_bit_generator
+      = invocable<_Gen&> && unsigned_integral<invoke_result_t<_Gen&>>
+      && requires
+      {
+	{ _Gen::min() } -> same_as<invoke_result_t<_Gen&>>;
+	{ _Gen::max() } -> same_as<invoke_result_t<_Gen&>>;
+      };
+#endif
 
   /**
    * @brief A function template for converting the output of a (integral)
